when all products are deleted from cart, message appears 'no products in cart'

--- a/src/public/css/cart.style.css
+++ b/src/public/css/cart.style.css
@@ -223,3 +223,10 @@
 	font-weight: 700;
 	color: #000;
 }
+
+.no-products {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+}
