--- a/src/public/css/login.style.css
+++ b/src/public/css/login.style.css
@@ -87,7 +87,7 @@
 	font-weight: 600;
 	border: none;
 	margin-left: 1rem;
-	/* padding: 0.5rem; */
+	padding: 0.5rem;
 	height: 40px;
 	width: 100%;
 }
