--- a/src/public/css/products.style.css
+++ b/src/public/css/products.style.css
@@ -82,7 +82,8 @@ body {
 	align-items: center;
 	/* height: 3rem; */
 	height: 100%;
-	width: 10rem;
+	width: 12rem;
+	margin: 0.5rem;
 }
 
 .greeting-container {
