--- a/src/public/css/cart.style.css
+++ b/src/public/css/cart.style.css
@@ -19,7 +19,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: normal;
-	min-width: 25rem;
+	max-width: 25rem;
 }
 
 .cart-header-container {
